Bug 42096 - lto.c:289:7: error: implicit declaration of function 'strtoll'
Summary: lto.c:289:7: error: implicit declaration of function 'strtoll'
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-18 17:12 UTC by John David Anglin
Modified: 2009-11-19 15:57 UTC (History)
2 users (show)

See Also:
Host: hppa64-hp-hpux11.11
Target: hppa64-hp-hpux11.11
Build: hppa64-hp-hpux11.11
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John David Anglin 2009-11-18 17:12:57 UTC
/test/gnu/gcc/objdir/./prev-gcc/xgcc -B/test/gnu/gcc/objdir/./prev-gcc/ -B/opt/g
nu64/gcc/gcc-4.5.0/hppa64-hp-hpux11.11/bin/ -B/opt/gnu64/gcc/gcc-4.5.0/hppa64-hp
-hpux11.11/bin/ -B/opt/gnu64/gcc/gcc-4.5.0/hppa64-hp-hpux11.11/lib/ -isystem /op
t/gnu64/gcc/gcc-4.5.0/hppa64-hp-hpux11.11/include -isystem /opt/gnu64/gcc/gcc-4.
5.0/hppa64-hp-hpux11.11/sys-include    -c  -g -O2 -DIN_GCC   -W -Wall -Wwrite-st
rings -Wcast-qual -Wstrict-prototypes -Wmissing-prototypes -Wmissing-format-attr
ibute -pedantic -Wno-long-long -Wno-variadic-macros -Wno-overlength-strings -Wer
ror -Wold-style-definition -Wc++-compat -fno-common  -DHAVE_CONFIG_H -I. -Ilto -
I../../gcc/gcc -I../../gcc/gcc/lto -I../../gcc/gcc/../include -I../../gcc/gcc/..
/libcpp/include -I/opt/gnu64/gcc/gcc-4.5.0/include  -I../../gcc/gcc/../libdecnum
ber -I../../gcc/gcc/../libdecnumber/dpd -I../libdecnumber   -I/opt/gnu64/include
 -I/opt/gnu64/include/libelf  ../../gcc/gcc/lto/lto-lang.c -o lto/lto-lang.o
/test/gnu/gcc/objdir/./prev-gcc/xgcc -B/test/gnu/gcc/objdir/./prev-gcc/ -B/opt/g
nu64/gcc/gcc-4.5.0/hppa64-hp-hpux11.11/bin/ -B/opt/gnu64/gcc/gcc-4.5.0/hppa64-hp
-hpux11.11/bin/ -B/opt/gnu64/gcc/gcc-4.5.0/hppa64-hp-hpux11.11/lib/ -isystem /op
t/gnu64/gcc/gcc-4.5.0/hppa64-hp-hpux11.11/include -isystem /opt/gnu64/gcc/gcc-4.
5.0/hppa64-hp-hpux11.11/sys-include    -c  -g -O2 -DIN_GCC   -W -Wall -Wwrite-st
rings -Wcast-qual -Wstrict-prototypes -Wmissing-prototypes -Wmissing-format-attr
ibute -pedantic -Wno-long-long -Wno-variadic-macros -Wno-overlength-strings -Wer
ror -Wold-style-definition -Wc++-compat -fno-common  -DHAVE_CONFIG_H -I. -Ilto -
I../../gcc/gcc -I../../gcc/gcc/lto -I../../gcc/gcc/../include -I../../gcc/gcc/..
/libcpp/include -I/opt/gnu64/gcc/gcc-4.5.0/include  -I../../gcc/gcc/../libdecnum
ber -I../../gcc/gcc/../libdecnumber/dpd -I../libdecnumber   -I/opt/gnu64/include
 -I/opt/gnu64/include/libelf  ../../gcc/gcc/lto/lto.c -o lto/lto.o
cc1: warnings being treated as errors
../../gcc/gcc/lto/lto.c: In function 'lto_resolution_read':
../../gcc/gcc/lto/lto.c:289:7: error: implicit declaration of function 'strtoll'
make[3]: *** [lto/lto.o] Error 1
make[3]: Leaving directory `/test/gnu/gcc/objdir/gcc'
Comment 1 espindola 2009-11-18 20:21:20 UTC
Is strtoll defined in some other header in hppa64-hp-hpux11.11? If it isn't, I will start porting it to libiberty.
Comment 2 dave 2009-11-18 21:51:05 UTC
Subject: Re:  lto.c:289:7: error: implicit declaration of function 'strtoll'

> Is strtoll defined in some other header in hppa64-hp-hpux11.11? If it isn't, I
> will start porting it to libiberty.

It's not defined.  strtol is available, and long and long long are
the same size on this target.  However, this isn't going to work
on 32-bit hpux targets.  So, I think porting it mto libibery is a
good idea.

Dave
Comment 3 espindola 2009-11-19 15:30:25 UTC
Subject: Bug 42096

Author: espindola
Date: Thu Nov 19 15:30:04 2009
New Revision: 154330

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=154330
Log:
2009-11-19  Rafael Avila de Espindola  <espindola@google.com>

	PR bootstrap/42096
	* lto-plugin.c (claim_file_handler): Print offsets in hex.

2009-11-19  Rafael Avila de Espindola  <espindola@google.com>

	PR bootstrap/42096
	* lto-elf.c (lto_elf_file_open): Use lto_parse_hex.
	* lto.c (lto_parse_hex): New.
	(lto_resolution_read): Use lto_parse_hex.
	* lto.h (lto_parse_hex): New.


Modified:
    trunk/gcc/lto/ChangeLog
    trunk/gcc/lto/lto-elf.c
    trunk/gcc/lto/lto.c
    trunk/gcc/lto/lto.h
    trunk/lto-plugin/ChangeLog
    trunk/lto-plugin/lto-plugin.c

Comment 4 espindola 2009-11-19 15:57:17 UTC
Closing this bug as bootstrap should now work. The gold plugin still needs some portability improvements.