2009-11-19  Rafael Avila de Espindola  <espindola@google.com>

PR bootstrap/42096
	* lto-plugin.c (claim_file_handler): Print offsets in hex.

2009-11-19  Rafael Avila de Espindola  <espindola@google.com>

	PR bootstrap/42096
	* lto-elf.c (lto_elf_file_open): Use lto_parse_hex.
	* lto.c (lto_parse_hex): New.
	(lto_resolution_read): Use lto_parse_hex.
	* lto.h (lto_parse_hex): New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@154330 138bc75d-0d04-0410-961f-82ee72b054a4